# ainative-business.github.io

./: .gitignore  AGENTS.md  APP-MARKETING.md  APP-SYNC.md  CLAUDE.md  CODEX-CC.md  COMMANDS.md  HANDOFF.md  MAC-TO-SPARK-TRANSITION.md  NARRATIVE-CONTRACT.md  PRODUCT-ARTICLES.md  SYNC-WORKFLOW.md  WORKFLOWS.md  _STATUS.json  ainative-stats.md  astro.config.mjs  package-lock.json  package.json  seo-progress.md
.claude/: settings.json
.codex/: config.toml  hooks.json
.github/: lighthouserc.json
_FLOWS/: the-machine-that-builds-machines.md
_GUIDES/: INDEX.md  NARRATIVE-CONTRACT.md  PRODUCT-ARTICLES.md  arena-distribution.md  arena-e2e-smoke-runbook.md  arena-storefront-marketing.md  index.md  local-ai-stack-commands.md  product-articles.md
_SPECS/: INDEX.md  arena-enhancements-v1.md  arena-enhancements-v2.md  arena-guardrail-settings-v1.md  astrodynamics-vertical-v1.md  dashboard-skill-v1.md  design-system-v1.md  editorial-craft-pass-v1.md  grounded-eval-v1.md  hermes-harness-v1.md  index.md  notebooks-as-artifacts-v1-mac.md  notebooks-as-artifacts-v1.md  orionfold-advisor-dogfood-v1.md  orionfold-advisor-nvidia-native-v1.md  orionfold-advisor-unsloth-arena-v1.md  orionfold-brand-alignment-v1.md  orionfold-local-ai-workbench-v1.md  patent-strategist-v1.md  rl-lane-autonomy-v1.md  rlvr-loop-v1.md  roadmap-reconciliation.md  spark-arena-v1.md
arena-app/: astro.config.mjs  fieldkit  package.json  tsconfig.json
fieldkit/: .pre-commit-config.yaml  CHANGELOG.md  README.md  _version.py  pyproject.toml
fieldkit/docs/: field_edition.md
fieldkit/docs/api/: arena.md  budget.md  capabilities.md  cli.md  cost.md  eval.md  harness.md  lineage.md  memory.md  nim.md  notebook.md  publish.md  quant.md  rag.md  reward.md  rl.md  training.md  viz.md
fieldkit/samples/: bench-rag.py  feasibility-math.py  hello-lineage.py  hello-nim.py  naive-rag.py
fieldkit/scripts/: check_license_header.py  sync_capabilities.py
fieldkit/src/fieldkit/: __init__.py  _rl_gpu_serve.py  _rl_gpu_trainer.py  _version.py  budget.py  cost.py  memory.py  reward.py  rl.py
fieldkit/src/fieldkit/arena/: __init__.py  benches.py  cli.py  cortex_chat.py  fixtures.py  guardrail.py  importer.py  jobs.py  lane.py  lanes.py  launcher.py  mirror.py  rubrics.py  scheduler.py  schemas.py  server.py  store.py  webui.py
fieldkit/src/fieldkit/arena/scripts/: __init__.py  import_existing.py
fieldkit/src/fieldkit/assets/: orionfold.mplstyle
fieldkit/src/fieldkit/capabilities/: __init__.py
fieldkit/src/fieldkit/capabilities/data/: __init__.py  spark-capabilities.json
fieldkit/src/fieldkit/cli/: __init__.py
fieldkit/src/fieldkit/eval/: __init__.py  graded.py  vertical.py
fieldkit/src/fieldkit/eval/rubrics/: office_action_argument.md  patent_claim_validity.md
fieldkit/src/fieldkit/field_edition/: __init__.py  advisor.py  cli.py  compose.py  cosign.py  doctor.py  down.py  grounded.py  ingest.py  license.py  onboard.py  proven_matrix.py  recall.py  repair.py  up.py  update.py  verify.py
fieldkit/src/fieldkit/field_edition/data/: advisor-curveball-mini.json  cortex-recall-mini.json  license-sample.json
fieldkit/src/fieldkit/harness/: __init__.py  brains.py  mcp.py
fieldkit/src/fieldkit/lineage/: __init__.py
fieldkit/src/fieldkit/nim/: __init__.py
fieldkit/src/fieldkit/notebook/: __init__.py
fieldkit/src/fieldkit/publish/: __init__.py
fieldkit/src/fieldkit/quant/: __init__.py
fieldkit/src/fieldkit/rag/: __init__.py
fieldkit/src/fieldkit/training/: __init__.py  convert.py  decide.py  probe.py  recipe.py  run.py
fieldkit/src/fieldkit/training/data/decide-entries/: 2026-05-22-paired-bakeoff.yaml
fieldkit/src/fieldkit/viz/: __init__.py
fieldkit/tests/: __init__.py  conftest.py  test_budget.py  test_capabilities.py  test_cli.py  test_cost.py  test_eval.py  test_eval_graded.py  test_field_edition.py  test_field_edition_onboard.py  test_harness.py  test_harness_mcp.py  test_lanes.py  test_lineage.py  test_memory.py  test_nim.py  test_nim_spark.py  test_notebook.py  test_publish.py  test_publish_positioning.py  test_quant.py  test_rag.py  test_rag_spark.py  test_reward.py  test_rl.py  test_training.py  test_training_convert.py  test_training_decide.py  test_training_probe.py  test_training_recipe.py  test_training_run.py  test_vertical_bench.py  test_viz.py
fieldkit/tests/arena/: test_advisor_preflight.py  test_benches.py  test_build_spine.py  test_corpus_feed.py  test_corpus_request.py  test_cortex_chat.py  test_fixtures.py  test_grounded_eval.py  test_guardrail.py  test_importer.py  test_jobs.py  test_jobs_api.py  test_lane.py  test_launch_process.py  test_launcher.py  test_leaderboard_live.py  test_mirror.py  test_mirror_does_not_leak.py  test_reward_signal.py  test_run_context.py  test_runtimes.py  test_scheduler.py  test_scout.py  test_server.py  test_sft_progress.py  test_signal_teardown_process.py  test_store.py  test_webui.py
fieldkit/tests/eval/: test_irac_structure.py  test_judge_backed_scorers.py  test_mcq_letter.py  test_prior_art_relevance.py
handoff/: 2026-04-17-ainative-pivot-stagent-repo.md  2026-04-18-ainative-business-naming-and-rendering.md  2026-04-18-folder-rename-to-ainative-business.md
mirrors/: destination-overrides.md
papers/: README.md  papers.json
plans/: patent-strategist-v4-nemo.md
probes/: baseline-4096.json  baseline.json  patent-only-10q.jsonl  patent-strategist-v1-2026-05-19.json  patent-strategist-v1-2026-05-19.patent-only.json  patent-strategist-v3-2026-05-21.json  patent-strategist-v3-nemo-2026-05-21.json  reasoning-preservation-20q.jsonl  smoke-step200.json
public/: CNAME  humans.txt  llms-full.txt  llms.txt  manifest.json  robots.txt
research/: solo-builder-case-study.md
scripts/: _bpe_decode.py  bench_local_vs_cc_README.md  bench_local_vs_cc_nim.py  bench_local_vs_cc_ollama.py  bench_local_vs_cc_prepare.py  bench_local_vs_cc_render.py  build_hf_dataset_bench.py  build_hf_hermes_brain_bench.py  build_patent_corpus.py  build_rag_index.py  build_smoke_training_set.py  build_train_jsonl.py  compare_probes.py  cyber_merge.py  deploy_arena_demo.mjs  (+49 more)
(+1025 files in other folders)
