[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "fieldkit"
description = "Verified-on-Spark patterns lifted from the ai-field-notes blog into one importable Python package."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Manav Sehgal", email = "sehgal.manav@gmail.com" }]
keywords = ["nvidia", "dgx-spark", "nim", "rag", "llm", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
  "httpx>=0.27",
  "tenacity>=8.5",
  "psycopg[binary]>=3.2",
  "numpy>=1.26",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.7",
  "build>=1.2",
  "twine>=5.0",
]
# Runnable-notebook surface (notebooks-as-artifacts v1). Powers
# `fieldkit.viz` (branded matplotlib charts + great_tables hero tables) and
# `fieldkit.notebook` (dual-path Spark/Colab/Kaggle inference + scaffolding).
# Heavy + optional by design — `import fieldkit` stays cheap without it.
notebook = [
  "matplotlib>=3.8",
  "great-tables>=0.12",
  "pandas>=2.0",
  "polars>=1.0",  # great_tables nanoplot rendering needs it even with a pandas frame
  "jupytext>=1.16",
  "papermill>=2.6",
  "pyyaml>=6.0",  # notebook-author/notebook-snapshot scripts read artifact manifests
  "jupyterlab>=4.2",
  "huggingface_hub>=0.24",
  "llama-cpp-python>=0.3",
]
# Agent-harness MCP surface (Harnesses H4). `fieldkit.harness.mcp` exposes a
# curated set of fieldkit surfaces as Model-Context-Protocol tools so a harness
# (Hermes first) can drive the Spark. Optional + lazy — `import fieldkit.harness`
# stays cheap; only `build_mcp_server` imports `mcp`.
harness = [
  "mcp>=1.8",
]
# Operator-cockpit sidecar surface (Cockpit series — spark-arena-v1 §4.7).
# `fieldkit.arena.server` + `.store` + `.mirror` + `.jobs` — a FastAPI app
# binding 127.0.0.1:7866 with SSE streaming, an aiosqlite-backed
# `~/.fieldkit/arena.db`, and (v0.2) an arq+Redis job queue for background
# eval/leaderboard work. All optional and lazy — `import fieldkit.arena`
# stays stdlib-only; FastAPI is only imported when `create_app()` is called.
# `arq` + `redis` ship in v0.1 for forward compat (the M1 fresh-venv install
# is itself the R4 aarch64 canary — see spec §3.3 / §10) but the M1–M6
# surface is runtime-optional on the queue.
arena = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sse-starlette>=2.1",
  "aiosqlite>=0.20",
  "arq>=0.26",
  "redis>=5.0",
  "huggingface_hub>=0.24",
  "pyyaml>=6.0",
  "cryptography>=42",  # AC-7 license: offline Ed25519 verify (fieldkit.field_edition.license)
]
# Closed-loop RLVR GPU backend (rlvr-loop-v1 — the engine of pane→hands→engine).
# `fieldkit.rl.gpu_seams` wires the vendored `clawgym-on-spark-grpo` REINFORCE-
# with-KL LoRA step (`fieldkit._rl_gpu_trainer`) + the torch-free HTTP rollout
# sampler / vLLM serve lane (`fieldkit._rl_gpu_serve`). Heaviest + most
# operator-gated of the extras: `import fieldkit.rl` stays stdlib-cheap; ONLY a
# live `gpu_seams()` call imports the torch trainer. The trainer deps below are
# pip-installable; the rollout/serve lane needs a **pinned vLLM served as a
# separate process** — there is NO aarch64+CUDA-13 vLLM wheel to depend on yet
# (`project_verl_atgpo_vllm_gap`), so vLLM is deliberately NOT a dependency here.
# Bring it up on the box separately (see fieldkit/docs/api/rl.md "Operator run").
#
# BUG-4 (e2e smoke 2026-06-06): the old loose floor pins + a reboot-ephemeral
# /tmp venv silently re-resolved the newest stack every reboot and broke the
# rl_run trainer load in a 4-link chain. The proven GB10 combo is RECORDED here:
#   transformers==4.51.3 + protobuf + sentencepiece + torch 2.12.0+cu130 +
#   peft 0.19.1 + the shadow model dir (docs/api/rl.md "Operator run").
# Why each pin:
# - transformers >=4.51.3,<4.52: 5.x crashes `device_map="auto"` on GB10
#   ("Cannot copy out of meta tensor"); 4.51 is the first qwen3-capable 4.x;
#   later 4.5x add new failure modes against the NeMo-exported tokenizer_config
#   (list-form `extra_special_tokens` — no 4.x accepts it; the shadow model dir
#   fixes that link, the pin keeps the rest of the stack where it was proven).
# - protobuf + sentencepiece: hard runtime deps of the qwen3 tokenizer path
#   that transformers does NOT declare (link 2 of the chain).
rl = [
  "torch>=2.4",
  "peft>=0.12,<0.20",
  "transformers>=4.51.3,<4.52",
  "protobuf",
  "sentencepiece",
  "safetensors>=0.4",
  "accelerate>=0.33",  # peft device_map="auto" needs it
]

[project.scripts]
fieldkit = "fieldkit.cli:app"

[project.urls]
Homepage = "https://ainative.business/fieldkit/"
Source = "https://github.com/orionfold/ainative-business.github.io/tree/main/fieldkit"
Changelog = "https://github.com/orionfold/ainative-business.github.io/blob/main/fieldkit/CHANGELOG.md"
Issues = "https://github.com/orionfold/ainative-business.github.io/issues"

[tool.hatch.version]
path = "src/fieldkit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fieldkit"]
include = [
  "src/fieldkit/**/*.py",
  "src/fieldkit/**/data/*.json",
  "src/fieldkit/**/data/*.jsonl.gz",  # AD-FK-β: the vendored Advisor demo corpus pack
  "src/fieldkit/**/data/**/*.yaml",
  "src/fieldkit/eval/rubrics/*.md",
  "src/fieldkit/assets/*.mplstyle",
  # P7 — the runnable Orionfold Arena cockpit rides the wheel. Baked by
  # `fieldkit arena build`; served by the sidecar's StaticFiles mount at
  # /arena. Same mechanism as the rubric/mplstyle data files above.
  "src/fieldkit/arena/_webui/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/fieldkit",
  "tests",
  "samples",
  "docs",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "spark: integration tests that require live NIM / pgvector on the DGX Spark (deselect with '-m \"not spark\"')",
]
